--- a/app/assets/style/_base.scss
+++ b/app/assets/style/_base.scss
@@ -17,7 +17,7 @@ img {
 }
 a {
   text-decoration: none;
-}
-a:hover {
-  text-decoration: underline;
+  &:hover {
+    text-decoration: underline;
+  }
 }
