--- a/app/assets/style/_button.scss
+++ b/app/assets/style/_button.scss
@@ -3,9 +3,9 @@
   border: 1px solid transparent;
   background: transparent;
   cursor: pointer;
-}
-.btn:hover {
-  opacity: 0.7;
+  &:hover {
+    opacity: 0.7;
+  }
 }
 
 .btn-danger {
