--- a/app/assets/style/_utilities.scss
+++ b/app/assets/style/_utilities.scss
@@ -3,6 +3,10 @@
   margin: 0 auto;
 }
 
+.link-hover:hover {
+  opacity: 0.7;
+}
+
 // font
 .ff-1 {
   font-family: $ff-1;
@@ -169,10 +173,6 @@
 }
 .pb-10 {
   padding-bottom: $space * 10;
-}
-.px-3 {
-  padding-left: $space * 3;
-  padding-right: $space * 3;
 }
 .px-4 {
   padding-left: $space * 4;
